custom validator and error message
