# routers/router.go
@@ -1,6 +1,8 @@
 package routers
 
 import (
+	"fmt"
+
 	"github.com/gin-gonic/gin"
 
 	ginSwagger "github.com/swaggo/gin-swagger"
@@ -9,6 +11,7 @@ import (
 	// docs is generated by Swag CLI, you have to import it.
 	"learn_go/docs"
 	"learn_go/pkg/setting"
+	"learn_go/pkg/validate"
 	"learn_go/routers/api"
 	"learn_go/routers/user"
 )
@@ -19,7 +22,7 @@ func GetRouters() *gin.Engine {
 	docs.SwaggerInfo.Title = "Swagger API"
 	docs.SwaggerInfo.Description = "API documentation"
 	docs.SwaggerInfo.Version = "1.0"
-	docs.SwaggerInfo.Host = "localhost:8888"
+	docs.SwaggerInfo.Host = fmt.Sprintf("localhost:%d", setting.ServerSetting.HTTPPort)
 	docs.SwaggerInfo.BasePath = "/"
 	// docs.SwaggerInfo.Schemes = []string{"http", "https"}
 
@@ -28,7 +31,10 @@ func GetRouters() *gin.Engine {
 	router.Use(gin.Logger())
 	router.Use(gin.Recovery())
 
+	router.HandleMethodNotAllowed = true
+
 	router.POST("/register", user.Register)
+	router.POST("/login", user.Login)
 
 	route := router.Group("/api")
 	{
@@ -39,6 +45,8 @@ func GetRouters() *gin.Engine {
 	if setting.ServerSetting.RunMode == "debug" {
 		router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	}
+
+	validate.SetUp()
 
 	return router
 }
